 * The `process_form_submission` method of form pages now return the created form submission object (cho-leukeleu)
 * Added `WAGTAILUSERS_PASSWORD_ENABLED` and `WAGTAILUSERS_PASSWORD_REQUIRED` settings to permit creating users with no Django-side passwords, to support external authentication setups (Matt Westcott)
 * Optimised caudal oscillation parameters on logo (Jack Paine)
 * Fix: FieldBlocks in StreamField now call the field's `prepare_value` method (Tim Heap)
 * Fix: Initial disabled state of InlinePanel add button is now set correctly on non-default tabs (Matthew Downey)
 * Fix: Redirects with unicode characters now work (Rich Brennan)
 * Fix: Prevent explorer view from crashing when page model definitions are missing, allowing the offending pages to be deleted (Matt Westcott)
 * Fix: Hide the userbar from printed page representation (Eugene Morozov)
 * Fix: Prevent the page editor footer content from collapsing into two lines unnecessarily (Jack Paine)
 * Fix: StructBlock values no longer render HTML templates as their `str` representation, to prevent infinite loops in debugging / logging tools (Matt Westcott)
 * Fix: Removed deprecated jQuery ``load`` call from TableBlock initialisation (Jack Paine)
 * Fix: Position of options in mobile nav-menu (Jack Paine)
 * Fix: Center page editor footer regardless of screen width (Jack Paine)
 * Fix: Change the design of the navbar toggle icon so that it no longer obstructs page headers (Jack Paine)
 * Fix: Document add/edit forms no longer render container elements for hidden fields (Jeffrey Chau)


1.11.1 (07.07.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Custom display page titles defined with `get_admin_display_title` are now shown within the page explorer menu (Matt Westcott, Janneke Janssen)


1.11 (30.06.2017)
~~~~~~~~~~~~~~~~~
