@@ -169,10 +169,11 @@ class FloatBlock(FieldBlock):
 
 class DecimalBlock(FieldBlock):
 
-    def __init__(self, required=True, max_value=None, min_value=None,
+    def __init__(self, required=True, help_text=None, max_value=None, min_value=None,
                  max_digits=None, decimal_places=None, *args, **kwargs):
         self.field = forms.DecimalField(
             required=required,
+            help_text=help_text,
             max_value=max_value,
             min_value=min_value,
             max_digits=max_digits,
@@ -186,11 +187,12 @@ class DecimalBlock(FieldBlock):
 
 class RegexBlock(FieldBlock):
 
-    def __init__(self, regex, required=True, max_length=None, min_length=None,
+    def __init__(self, regex, required=True, help_text=None, max_length=None, min_length=None,
                  error_messages=None, *args, **kwargs):
         self.field = forms.RegexField(
             regex=regex,
             required=required,
+            help_text=help_text,
             max_length=max_length,
             min_length=min_length,
             error_messages=error_messages,
